{
  "version": 4,
  "terraform_version": "1.15.9",
  "serial": 28,
  "lineage": "88afe048-559d-8e37-1005-84092729d348",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-052355af2a014bd2c",
            "arn": "arn:aws:ec2:us-east-1:699588737174:instance/i-0137ff3f8e252fad2",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "freshcart-dev-backend-profile",
            "id": "i-0137ff3f8e252fad2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0e65ebda990d02392"
              }
            ],
            "primary_network_interface_id": "eni-0e65ebda990d02392",
            "private_dns": "ip-10-0-10-225.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.225",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d74f4491cd547657",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00d10dcfcab08a821",
            "tags": {
              "Environment": "dev",
              "Name": "freshcart-dev-backend"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "freshcart-dev-backend"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-047c08d18b625d1c2"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "699588737174",
            "id": "i-0137ff3f8e252fad2",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "freshcart",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:699588737174:loadbalancer/app/freshcart-dev/6822f30af74e35be",
            "arn_suffix": "app/freshcart-dev/6822f30af74e35be",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "freshcart-dev-386220433.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:699588737174:loadbalancer/app/freshcart-dev/6822f30af74e35be",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "freshcart-dev",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0e30d3703a188dab9"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05a28cb12066d9936"
              },
              {
                "subnet_id": "subnet-08b4e35184c22f38e"
              }
            ],
            "subnets": [
              "subnet-05a28cb12066d9936",
              "subnet-08b4e35184c22f38e"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "freshcart-dev-alb"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "freshcart-dev-alb"
            },
            "vpc_id": "vpc-0ca79cab099be4bba",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:699588737174:loadbalancer/app/freshcart-dev/6822f30af74e35be"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:699588737174:listener/app/freshcart-dev/6822f30af74e35be/f9a3f4cc44fbee04",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [
                  {
                    "stickiness": [
                      {
                        "duration": 0,
                        "enabled": false
                      }
                    ],
                    "target_group": [
                      {
                        "arn": "arn:aws:elasticloadbalancing:us-east-1:699588737174:targetgroup/freshcart-dev/eb4f1298fde1a0d4",
                        "weight": 1
                      }
                    ]
                  }
                ],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:699588737174:targetgroup/freshcart-dev/eb4f1298fde1a0d4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:699588737174:listener/app/freshcart-dev/6822f30af74e35be/f9a3f4cc44fbee04",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:699588737174:loadbalancer/app/freshcart-dev/6822f30af74e35be",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:699588737174:listener/app/freshcart-dev/6822f30af74e35be/f9a3f4cc44fbee04"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "checkout_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:699588737174:targetgroup/freshcart-dev/eb4f1298fde1a0d4",
            "arn_suffix": "targetgroup/freshcart-dev/eb4f1298fde1a0d4",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "3000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:699588737174:targetgroup/freshcart-dev/eb4f1298fde1a0d4",
            "ip_address_type": "ipv4",
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:699588737174:loadbalancer/app/freshcart-dev/6822f30af74e35be"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "freshcart-dev",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ca79cab099be4bba"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:699588737174:targetgroup/freshcart-dev/eb4f1298fde1a0d4"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:699588737174:security-group/sg-03f5e4789530b56bd",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03f5e4789530b56bd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "freshcart-dev-alb",
            "name_prefix": "",
            "owner_id": "699588737174",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0514d9dd250bc43db"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "699588737174",
            "id": "sg-03f5e4789530b56bd",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:699588737174:security-group/sg-07a84e17dd023730e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07a84e17dd023730e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03f5e4789530b56bd"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "freshcart-dev-backend",
            "name_prefix": "",
            "owner_id": "699588737174",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0514d9dd250bc43db"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "699588737174",
            "id": "sg-07a84e17dd023730e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0031da601dd270cad",
            "arn": "arn:aws:ec2:us-east-1:699588737174:elastic-ip/eipalloc-0031da601dd270cad",
            "association_id": "eipassoc-04fbfeb530ea3fa2a",
            "domain": "vpc",
            "id": "eipalloc-0031da601dd270cad",
            "network_border_group": "us-east-1",
            "network_interface": "eni-08e0d7538f34cffe4",
            "private_dns": "ip-10-0-1-33.ec2.internal",
            "private_ip": "10.0.1.33",
            "public_dns": "ec2-52-20-18-97.compute-1.amazonaws.com",
            "public_ip": "52.20.18.97",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "freshcart-dev-nat-eip"
            },
            "tags_all": {
              "Name": "freshcart-dev-nat-eip"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "699588737174",
            "id": "eipalloc-0031da601dd270cad",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:699588737174:internet-gateway/igw-05e940d559b5f8ced",
            "id": "igw-05e940d559b5f8ced",
            "owner_id": "699588737174",
            "region": "us-east-1",
            "tags": {
              "Name": "freshcart-dev-igw"
            },
            "tags_all": {
              "Name": "freshcart-dev-igw"
            },
            "vpc_id": "vpc-0514d9dd250bc43db"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "699588737174",
            "id": "igw-05e940d559b5f8ced",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0031da601dd270cad",
            "association_id": "eipassoc-04fbfeb530ea3fa2a",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0ae07d31fc325e595",
            "network_interface_id": "eni-08e0d7538f34cffe4",
            "private_ip": "10.0.1.33",
            "public_ip": "52.20.18.97",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0eed0d7f471fe94ea",
            "tags": {
              "Name": "freshcart-dev-nat"
            },
            "tags_all": {
              "Name": "freshcart-dev-nat"
            },
            "vpc_id": "vpc-0514d9dd250bc43db"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "699588737174",
            "id": "nat-0ae07d31fc325e595",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:699588737174:route-table/rtb-0c58104f81682c79e",
            "id": "rtb-0c58104f81682c79e",
            "owner_id": "699588737174",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ae07d31fc325e595",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "freshcart-dev-private"
            },
            "tags_all": {
              "Name": "freshcart-dev-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0514d9dd250bc43db"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "699588737174",
            "id": "rtb-0c58104f81682c79e",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:699588737174:route-table/rtb-03bd16ed143624ada",
            "id": "rtb-03bd16ed143624ada",
            "owner_id": "699588737174",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05e940d559b5f8ced",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "freshcart-dev-public"
            },
            "tags_all": {
              "Name": "freshcart-dev-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0514d9dd250bc43db"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "699588737174",
            "id": "rtb-03bd16ed143624ada",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d9eee166730d2903",
            "region": "us-east-1",
            "route_table_id": "rtb-0c58104f81682c79e",
            "subnet_id": "subnet-08366fbc581aa2942"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "699588737174",
            "id": "rtbassoc-0d9eee166730d2903",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06a8f2bccfa24f381",
            "region": "us-east-1",
            "route_table_id": "rtb-03bd16ed143624ada",
            "subnet_id": "subnet-0eed0d7f471fe94ea"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "699588737174",
            "id": "rtbassoc-06a8f2bccfa24f381",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08b94a683fc951140",
            "region": "us-east-1",
            "route_table_id": "rtb-03bd16ed143624ada",
            "subnet_id": "subnet-0b4d093d70d34e3ad"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "699588737174",
            "id": "rtbassoc-08b94a683fc951140",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:699588737174:subnet/subnet-08366fbc581aa2942",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08366fbc581aa2942",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "699588737174",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "freshcart-dev-private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "freshcart-dev-private"
            },
            "vpc_id": "vpc-0514d9dd250bc43db"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "699588737174",
            "id": "subnet-08366fbc581aa2942",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:699588737174:subnet/subnet-0eed0d7f471fe94ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eed0d7f471fe94ea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "699588737174",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "freshcart-dev-public-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "freshcart-dev-public-1"
            },
            "vpc_id": "vpc-0514d9dd250bc43db"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "699588737174",
            "id": "subnet-0eed0d7f471fe94ea",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:699588737174:subnet/subnet-0b4d093d70d34e3ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b4d093d70d34e3ad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "699588737174",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "freshcart-dev-public-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "freshcart-dev-public-2"
            },
            "vpc_id": "vpc-0514d9dd250bc43db"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "699588737174",
            "id": "subnet-0b4d093d70d34e3ad",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:699588737174:vpc/vpc-0514d9dd250bc43db",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-015acfaf6fad6d37d",
            "default_route_table_id": "rtb-03e72b3803b534d08",
            "default_security_group_id": "sg-0e94b33815a8a822c",
            "dhcp_options_id": "dopt-0eeef913be4393d75",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0514d9dd250bc43db",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03e72b3803b534d08",
            "owner_id": "699588737174",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "freshcart-dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "freshcart-dev-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "699588737174",
            "id": "vpc-0514d9dd250bc43db",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}